// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KbqFormField should change kbq-password-toggle icon by click 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="false"
    class="kbq-password-toggle___EXPERIMENTAL"
    style="visibility: visible;"
  >
    <i
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye-slash_16"
      color="contrast-fade"
      kbq-icon-button=""
      tabindex="0"
    />
  </kbq-password-toggle>,
}
`;

exports[`KbqFormField should display kbq-cleaner 1`] = `
DebugElement {
  "nativeNode": <kbq-cleaner
    aria-hidden="false"
    class="kbq-cleaner___EXPERIMENTAL"
    style="visibility: visible;"
  >
    <i
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-circle-xmark_16"
      color="contrast-fade"
      kbq-icon-button="kbq-circle-xmark_16"
      tabindex="0"
    />
  </kbq-cleaner>,
}
`;

exports[`KbqFormField should display kbq-error 1`] = `
DebugElement {
  "nativeNode": <kbq-error
    class="kbq-hint___EXPERIMENTAL kbq-error"
    id="test-error-id"
  >
    <span
      class="kbq-hint__text"
    >
      Error
    </span>
  </kbq-error>,
}
`;

exports[`KbqFormField should display kbq-hint 1`] = `
DebugElement {
  "nativeNode": <kbq-hint
    class="kbq-hint___EXPERIMENTAL"
    id="test-hint-id"
  >
    <span
      class="kbq-hint__text"
    >
      Hint
    </span>
  </kbq-hint>,
}
`;

exports[`KbqFormField should display kbq-label 1`] = `
DebugElement {
  "nativeNode": <kbq-label
    class="kbq-label___EXPERIMENTAL"
    id="test-label-id"
  >
    Label
  </kbq-label>,
}
`;

exports[`KbqFormField should display kbq-password-hint error for invalid password 1`] = `
DebugElement {
  "nativeNode": <kbq-password-hint
    class="kbq-password-hint___EXPERIMENTAL kbq-hint___EXPERIMENTAL kbq-hint_fill-text-off kbq-error"
    id="test-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-empty kbq-xmark-s_16"
      kbq-icon=""
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
       (6/8) 
      
    </span>
  </kbq-password-hint>,
}
`;

exports[`KbqFormField should display kbq-password-hint initially 1`] = `
DebugElement {
  "nativeNode": <kbq-password-hint
    class="kbq-password-hint___EXPERIMENTAL kbq-hint___EXPERIMENTAL kbq-contrast-fade kbq-hint_fill-text-off"
    id="test-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-empty kbq-xmark-s_16"
      kbq-icon=""
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
       (0/8) 
      
    </span>
  </kbq-password-hint>,
}
`;

exports[`KbqFormField should display kbq-password-hint success for valid password 1`] = `
DebugElement {
  "nativeNode": <kbq-password-hint
    class="kbq-password-hint___EXPERIMENTAL kbq-hint___EXPERIMENTAL kbq-hint_fill-text-off kbq-success"
    id="test-password-hint-id"
  >
    <i
      class="kbq kbq-icon kbq-empty kbq-check-s_16"
      kbq-icon=""
    />
    <span
      class="kbq-hint__text"
    >
       Min length 
      
    </span>
  </kbq-password-hint>,
}
`;

exports[`KbqFormField should display kbq-password-toggle by input 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="false"
    class="kbq-password-toggle___EXPERIMENTAL"
    style="visibility: visible;"
  >
    <i
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye_16"
      color="contrast-fade"
      kbq-icon-button=""
      tabindex="0"
    />
  </kbq-password-toggle>,
}
`;

exports[`KbqFormField should display kbqPrefix 1`] = `
DebugElement {
  "nativeNode": <span
    class="kbq-prefix___EXPERIMENTAL"
    kbqprefix=""
  >
    Prefix
  </span>,
}
`;

exports[`KbqFormField should display kbqSuffix 1`] = `
DebugElement {
  "nativeNode": <span
    class="kbq-suffix___EXPERIMENTAL"
    kbqsuffix=""
  >
    Suffix
  </span>,
}
`;

exports[`KbqFormField should hide kbq-cleaner 1`] = `
DebugElement {
  "nativeNode": <kbq-cleaner
    aria-hidden="true"
    class="kbq-cleaner___EXPERIMENTAL"
    style="visibility: hidden;"
  >
    <i
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-circle-xmark_16"
      color="contrast-fade"
      kbq-icon-button="kbq-circle-xmark_16"
      tabindex="0"
    />
  </kbq-cleaner>,
}
`;

exports[`KbqFormField should hide kbq-password-toggle initially 1`] = `
DebugElement {
  "nativeNode": <kbq-password-toggle
    aria-hidden="true"
    class="kbq-password-toggle___EXPERIMENTAL"
    style="visibility: hidden;"
  >
    <i
      class="kbq kbq-icon-button kbq-icon kbq-contrast-fade kbq-eye_16"
      color="contrast-fade"
      kbq-icon-button=""
      tabindex="0"
    />
  </kbq-password-toggle>,
}
`;
